# INF3173_TP3_A23

inf3173-233-tp3-1-20231126213524/: .clang-format  CMakeLists.txt  README.md  plagiat.check
inf3173-233-tp3-1-20231126213524/data/: ipsum.txt
inf3173-233-tp3-1-20231126213524/jeu/: Devinette.java
inf3173-233-tp3-1-20231126213524/src/: CMakeLists.txt  fdset.c  fdset.h  interceptor.c  interceptor.h  main_interceptor.c  slomo.c  utils.c  utils.h
inf3173-233-tp3-1-20231126213524/test/: CMakeLists.txt  test_interceptor.cpp  testutils.cpp  testutils.h  wrapper.c  wrapper.h
